--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,4 @@
-streamlit
-langchain
-langchain-google-genai
+streamlit==1.29.0
+langchain==0.1.14
+langchain-google-genai==0.0.8
+google-generativeai==0.3.2
